--- a/package.json
+++ b/package.json
@@ -44,7 +44,10 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.4",
+    "date-fns": "^4.1.0",
     "next-themes": "^0.4.3",
+    "react-day-picker": "^9.3.0",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwind-variants": "^0.3.0",
